--- a/src/styles.css
+++ b/src/styles.css
@@ -438,6 +438,10 @@ header {
   align-items: end;
 }
 
+.set-row.no-labels label {
+  display: none;
+}
+
 .set-add {
   display: grid;
   justify-content: flex-start;
